# projects

./: README.md  ball tracker rohan code.ipynb  catphotoapp.html  clustering_rohan_manas_final.ipynb  cnn for target identification aerothon.ipynb  cnn manas rohan final (2).ipynb  decision trees and random forest- rohan.ipynb  decision_trees_final_rohan.ipynb  human identification using cnn (1).ipynb  ieaerospace.html  isolation forest to detect anomalies.ipynb  linear regression aero submission .ipynb  linear regression rohan updated.ipynb  linear_regression_final_manas_updated.ipynb  linearfinal.py  logisticmanasfinal.ipynb  manasopencvrohan (1).ipynb  multiple linear regression.ipynb  multiple_linear regression.ipynb  neural networks1.ipynb  opencvfinalupdated.py  resume.html  rohan shenoy ieee linear regression.ipynb  simple_linear_regression.ipynb  styles.css  svm trials - rohan (1).ipynb  svm trials - rohan.ipynb
c++/: 1.cpp  11.cpp  12.cpp  13.cpp  15.cpp  16.cpp  2.cpp  3.cpp  4(hill no).cpp  5.cpp  6.cpp  7.cpp  8.cpp
cafe menu/: styles.css
machine learning ibm/: IBM PROJECT_aus rainfall.ipynb
manas1/: CMakeLists.txt  package.xml
manas1/src/: talker_listener_node.cpp  talker_listener_node_2.cpp
manas2/: CMakeLists.txt  package.xml
manas2/src/: Astar.cpp  MapNodes.cpp  Mapping.cpp
pathfinding/: CMakeLists.txt  package.xml
pathfinding/src/: code.cpp
