<?xml version="1.0"?>
<package format="2">
  <name>manas1</name>
  <version>0.0.0</version>
  <description>A simple ROS package with publisher and subscriber nodes.</description>
  <maintainer email="rohanshenoy30@todo.todo">rohanshenoy30</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
